tests/baselines/reference/incrementOnTypeParameter.errors.txt
==== tests/cases/compiler/incrementOnTypeParameter.ts (2 errors) ====
    class C<T> {
        a: T;
        foo() {
            this.a++; 
            ~~~~~~
!!! incrementOnTypeParameter.ts(4,9): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
            for (var i: T, j = 0; j < 10; i++) { 
                                          ~
!!! incrementOnTypeParameter.ts(5,39): error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
            }
        }
    }
    